--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,4 +1,10 @@
+source 'https://github.com/CocoaPods/Specs.git'
+
+
+
 platform :ios, '9.0'
+
+
 
 use_frameworks!
 
@@ -12,5 +18,6 @@ target 'JJCodeTestLib_Example' do
     pod 'Nimble', '~> 7.0'
     pod 'FBSnapshotTestCase' , '~> 2.1.4'
     pod 'Nimble-Snapshots' , '~> 6.3.0'
+    pod 'MBProgressHUD'
   end
 end
